--- a/lectureScribing/gta-lecture.tex
+++ b/lectureScribing/gta-lecture.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 %%%%%%%%%%% Change the XX in the below line to 01, 02, 03, ..., 10, 11, or whatever
-\include{Week-01}
+\include{Week-XX}
 
 \end{document}
 
